style: add grid styling to timeslots container

--- a/src/components/WeekDateTimePicker/Calendar.css
+++ b/src/components/WeekDateTimePicker/Calendar.css
@@ -1,68 +1,79 @@
 
 .calendar-weekdays,
-.calendar-week{
+.calendar-week {
     display: flex;
 
 }
 
-.calendar-weekdays{
+.calendar-weekdays {
 
     justify-content: space-between;
     width: 100%;
     margin-left: 10px;
 }
+
 .calendar-month-year,
-.calendar-week-day{
+.calendar-week-day {
     margin-right: 10px;
     margin-bottom: 10px;
 }
-.calendar-day,.calendar-month-year{
+
+.calendar-day, .calendar-month-year {
     text-align: center;
 }
-.calendar-date-btn{
-    min-width: 30px!important;
-    font-size: 1rem!important;
-    padding: 5px 0px!important;
-    line-height: 1.4!important;
-}
-.calendar-weekday-name{
-    padding-bottom: 10px;
-}
-.step-calendar-select{
-    padding-left: 0px!important;
-    width: 100%;
-}
-.calendar-btn-left{
-    padding: 0px!important;
+
+.calendar-date-btn {
+    min-width: 30px !important;
+    font-size: 1rem !important;
+    padding: 5px 0 !important;
+    line-height: 1.4 !important;
 }
 
-.booking-form-stepper-container{
-    padding-right: 20px!important;
+.calendar-weekday-name {
+    padding-bottom: 10px;
+}
+
+.step-calendar-select {
+    padding-left: 0 !important;
+    width: 100%;
+}
+
+.calendar-btn-left {
+    padding: 0 !important;
+}
+
+.booking-form-stepper-container {
+    padding-right: 20px !important;
     overflow: hidden;
 }
-.calendar-btn-right{
-    padding: 0px 5px!important;
+
+.calendar-btn-right {
+    padding: 0 5px !important;
 }
-.calendar-month-year{
+
+.calendar-month-year {
     text-transform: capitalize;
     font-size: 1.15rem;
 
     margin: 10px 0;
 }
-.calendar-accordion-item{
-    margin: 15px 0;
-}
-.calendar-available-times{
+
+.calendar-accordion-item {
     margin: 15px 0;
 }
 
-.calendar-accordion-label-availability{
+.calendar-available-times {
+    margin: 15px 0;
+}
+
+.calendar-accordion-label-availability {
     display: block;
     padding: 0 10px;
     color: gray;
     font-style: italic;
 }
-.calendar-step-action-footer{
+
+.calendar-step-action-footer {
     display: flex;
     justify-content: flex-end;
 }
